--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,14 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">548</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">9,008</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">fakerLibrary.FakerDataGenerator</td><td><a href="#m0">testGeneratorDummyData</a></td><td rowspan="1">1675430075891</td><td rowspan="1">461</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">apiChaining.CreateUser</td><td><a href="#m0">testCreateUser</a></td><td rowspan="1">1675665031934</td><td rowspan="1">5996</td></tr><tr class="passedodd"><td rowspan="1">apiChaining.DeleteUser</td><td><a href="#m1">testDeleteUser</a></td><td rowspan="1">1675665040033</td><td rowspan="1">806</td></tr><tr class="passedeven"><td rowspan="1">apiChaining.GetUser</td><td><a href="#m2">testGetUser</a></td><td rowspan="1">1675665037947</td><td rowspan="1">894</td></tr><tr class="passedodd"><td rowspan="1">apiChaining.UpdateUser</td><td><a href="#m3">testUpdateUser</a></td><td rowspan="1">1675665038845</td><td rowspan="1">1183</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">fakerLibrary.FakerDataGenerator#testGeneratorDummyData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">apiChaining.CreateUser#testCreateUser</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>org.testng.TestRunner@6200f9cb</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">apiChaining.DeleteUser#testDeleteUser</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>org.testng.TestRunner@6200f9cb</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">apiChaining.GetUser#testGetUser</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>org.testng.TestRunner@6200f9cb</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">apiChaining.UpdateUser#testUpdateUser</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>org.testng.TestRunner@6200f9cb</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
